spacing problem solved

--- a/style.css
+++ b/style.css
@@ -2,24 +2,18 @@
     margin: 0;
     padding: 0;
 }
- body {
-    
-    margin: 0;
-    padding: 0;
-    width: 1440px;
-    
-}
+
 header {
     background-image: url(/assets/Hero-bg.png);
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    width: 1440px; 
-    height: 652px; 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+
 .center-section {
     width: 998px;
     height: 581px;
@@ -56,7 +50,7 @@ header {
     background-position: center;
     padding: 60px 20px;
     text-align: center;
-    width: 100%;
+
 }
 .support-section h2 {
     font-size: 32px;
@@ -94,7 +88,7 @@ header {
 footer {
     background-color: #f8f8f8;
     padding: 20px;
-    width: 100%;
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
